--- a/dmu32/dmu32_SPIRE-NEP/SPIRE-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SPIRE-NEP/SPIRE-NEP_catalogue_merging.ipynb
@@ -20,7 +20,7 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE_INPUT = True\n",
-    "MAKE_FINAL = False"
+    "MAKE_FINAL = True"
    ]
   },
   {
@@ -364,7 +364,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_gpc1_y_ap', 'flag_gpc1_i_ap', 'flag_gpc1_z_ap', 'flag_gpc1_g_ap', 'flag_gpc1_r_ap'}\n",
+      "{'flag_gpc1_y_ap', 'flag_gpc1_z_ap', 'flag_gpc1_g_ap', 'flag_gpc1_r_ap', 'flag_gpc1_i_ap'}\n",
       "Column flag_gpc1_g_ap has missing data\n",
       "Column flag_gpc1_r_ap has missing data\n",
       "Column flag_gpc1_i_ap has missing data\n",
@@ -548,8 +548,8 @@
     "                #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
     "                #New chi2 values\n",
     "                'cigale_chi2_opt', 'cigale_chi2_ir', 'cigale_chi2_red', 'cigale_chi2_ironly',\n",
-    "                'stellarity', \n",
-    "                'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
+    "                #'stellarity', 'stellarity_origin', 'flag_merged', \n",
+    "                'flag_cleaned', 'flag_gaia', \n",
     "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
     "                'zspec_association_flag']"
    ]
@@ -560,12 +560,22 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'flag_gpc1_y_ap', 'flag_gpc1_g_ap', 'flag_gpc1_z_ap', 'flag_gpc1_r_ap', 'flag_gpc1_i_ap'}\n",
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)"
+    "    print(set(merged_table.colnames) - set(columns))\n",
+    "    print(set(columns) - set(merged_table.colnames))"
    ]
   },
   {
