--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -27,7 +27,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-11-06 12:48:56.944546\n"
+      "2019-11-11 11:33:04.673525\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140294775711056-442211\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140488694076696-586540\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td></tr>\n",
@@ -158,14 +158,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140294775711056-442211').dataTable()\");\n",
+       "    console.log(\"$('#table140488694076696-586540').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140294775711056-442211').dataTable({\n",
+       "    $('#table140488694076696-586540').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -487,10 +487,12 @@
       "  - photoz: dmu_products/dmu24/dmu24_SGP/data/master_catalogue_sgp_20180221_photoz_20180502_r_optimised.fits\n",
       "  - cigale: dmu_products/dmu28/dmu28_SGP/data/zphot/HELP_final_results.fits\n",
       "SPIRE-NEP:\n",
-      "0 N N\n",
-      "  - xid not done.\n",
+      "0 dmu_products/dmu26/dmu26_XID+MIPS_SPIRE-NEP/data/dmu26_XID+MIPS_SPIRE-NEP_cat_20191107.fits ../dmu26/dmu26_XID+MIPS_SPIRE-NEP/data/dmu26_XID+MIPS_SPIRE-NEP_cat_20191107.fits\n",
+      "  - xid: dmu_products/dmu26/dmu26_XID+MIPS_SPIRE-NEP/data/dmu26_XID+MIPS_SPIRE-NEP_cat_20191107.fits\n",
+      "1 dmu_products/dmu26/dmu26_XID+SPIRE_SPIRE-NEP/data/dmu26_XID+SPIRE_SPIRE-NEP_cat_20191107.fits ../dmu26/dmu26_XID+SPIRE_SPIRE-NEP/data/dmu26_XID+SPIRE_SPIRE-NEP_cat_20191107.fits\n",
+      "  - xid: dmu_products/dmu26/dmu26_XID+SPIRE_SPIRE-NEP/data/dmu26_XID+SPIRE_SPIRE-NEP_cat_20191107.fits\n",
       "  - photoz: dmu_products/dmu24/dmu24_SPIRE-NEP/data/SPIRE-NEP_DESI-DR8_Zou_et_al_2019_photo_z_withhelp_id.fits\n",
-      "  - cigale not done.\n",
+      "  - cigale: dmu_products/dmu28/dmu28_SPIRE-NEP/data/zphot/HELP_final_results.fits\n",
       "SSDF:\n",
       "0 N N\n",
       "  - xid not done.\n",
@@ -571,7 +573,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140294775012600-583462\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140488672795112-167370\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th><th>xid_objects</th><th>photoz_objects</th><th>cigale_objects</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td><td>35319</td><td>107241</td><td>1240</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td><td>211453</td><td>139070</td><td>566</td></tr>\n",
@@ -591,7 +593,7 @@
        "<tr><td>15</td><td>NGP</td><td>20180219</td><td>20190204</td><td>6759591</td><td>177.6981971077162</td><td>4954806720</td><td>4.95 GB</td><td>1233547</td><td>3175339</td><td>185290</td></tr>\n",
        "<tr><td>16</td><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.27416379328431184</td><td>2721600</td><td>2.72 MB</td><td>812</td><td>2891</td><td>70</td></tr>\n",
        "<tr><td>17</td><td>SGP</td><td>20180221</td><td>20180221</td><td>29790690</td><td>294.5684540900642</td><td>45192530880</td><td>45.19 GB</td><td>3511594</td><td>17057212</td><td>352804</td></tr>\n",
-       "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.1280660469377391</td><td>1203840</td><td>1.2 MB</td><td>0</td><td>935</td><td>0</td></tr>\n",
+       "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.1280660469377391</td><td>1203840</td><td>1.2 MB</td><td>562</td><td>935</td><td>71</td></tr>\n",
        "<tr><td>19</td><td>SSDF</td><td>20180221</td><td>20180221</td><td>12661903</td><td>111.11624949343539</td><td>8078319360</td><td>8.08 GB</td><td>0</td><td>9268783</td><td>0</td></tr>\n",
        "<tr><td>20</td><td>xFLS</td><td>20180501</td><td>20180501</td><td>977148</td><td>7.44043242140754</td><td>1050474240</td><td>1.05 GB</td><td>52187</td><td>101282</td><td>5944</td></tr>\n",
        "<tr><td>21</td><td>XMM-13hr</td><td>20180501</td><td>20180501</td><td>38629</td><td>0.7570240166583633</td><td>10676160</td><td>10.68 MB</td><td>3563</td><td>10777</td><td>670</td></tr>\n",
@@ -619,14 +621,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140294775012600-583462').dataTable()\");\n",
+       "    console.log(\"$('#table140488672795112-167370').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140294775012600-583462').dataTable({\n",
+       "    $('#table140488672795112-167370').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -658,12 +660,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XID+: There are 21 fields with XID+ fluxes computed totalling 1157.87 square degrees.\n",
-      "      This is a total of 10800251 objects with an average of 7% of objects on processed areas.\n",
+      "XID+: There are 22 fields with XID+ fluxes computed totalling 1157.99 square degrees.\n",
+      "      This is a total of 10800813 objects with an average of 7% of objects on processed areas.\n",
       "Photo-zs: There are 23 fields with photozs computed totalling 1269.11 square degrees.\n",
       "      This is a total of 94338384 objects with an average of 55% of objects on processed areas.\n",
-      "CIGALE SEDs: There are 18 fields with SEDs computed totalling 790.40 square degrees.\n",
-      "      This is a total of 1156753 objects with an average of 1% of objects on processed areas.\n"
+      "CIGALE SEDs: There are 19 fields with SEDs computed totalling 790.53 square degrees.\n",
+      "      This is a total of 1156824 objects with an average of 1% of objects on processed areas.\n"
      ]
     }
    ],
