--- a/dmu32/dmu32_EGS/EGS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_EGS/EGS_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-11-22 13:08:16.494523\n"
+      "2019-11-27 16:59:33.871198\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE = True\n",
-    "MAKE_FINAL = False\n",
+    "MAKE_FINAL = True\n",
     "\n",
     "SUFFIX = '20180501'"
    ]
@@ -574,7 +574,17 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "set()\n",
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
