--- a/dmu32/2_Create_linked_readme.ipynb
+++ b/dmu32/2_Create_linked_readme.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,36 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dmu32_COSMOS/readme.txt\n",
-      "dmu32_ELAIS-S1/readme.txt\n",
-      "dmu32_GAMA-09/readme.txt\n",
-      "dmu32_Lockman-SWIRE/readme.txt\n",
-      "dmu32_ELAIS-N2/readme.txt\n",
-      "dmu32_Herschel-Stripe-82/readme.txt\n",
-      "dmu32_SA13/readme.txt\n",
-      "dmu32_GAMA-12/readme.txt\n",
-      "dmu32_GAMA-15/readme.txt\n",
-      "dmu32_AKARI-SEP/readme.txt\n",
-      "dmu32_SGP/readme.txt\n",
-      "dmu32_xFLS/readme.txt\n",
-      "dmu32_CDFS-SWIRE/readme.txt\n",
-      "dmu32_SSDF/readme.txt\n",
-      "dmu32_XMM-LSS/readme.txt\n",
-      "dmu32_SPIRE-NEP/readme.txt\n",
-      "dmu32_AKARI-NEP/readme.txt\n",
-      "dmu32_ELAIS-N1/readme.txt\n",
-      "dmu32_NGP/readme.txt\n",
-      "dmu32_XMM-13hr/readme.txt\n",
-      "dmu32_Bootes/readme.txt\n",
-      "dmu32_HDF-N/readme.txt\n",
-      "dmu32_EGS/readme.txt\n"
+      "dmu32_COSMOS/readme.md\n",
+      "dmu32_ELAIS-S1/readme.md\n",
+      "dmu32_GAMA-09/readme.md\n",
+      "dmu32_Lockman-SWIRE/readme.md\n",
+      "dmu32_ELAIS-N2/readme.md\n",
+      "dmu32_Herschel-Stripe-82/readme.md\n",
+      "dmu32_SA13/readme.md\n",
+      "dmu32_GAMA-12/readme.md\n",
+      "dmu32_GAMA-15/readme.md\n",
+      "dmu32_AKARI-SEP/readme.md\n",
+      "dmu32_SGP/readme.md\n",
+      "dmu32_xFLS/readme.md\n",
+      "dmu32_CDFS-SWIRE/readme.md\n",
+      "dmu32_SSDF/readme.md\n",
+      "dmu32_XMM-LSS/readme.md\n",
+      "dmu32_SPIRE-NEP/readme.md\n",
+      "dmu32_AKARI-NEP/readme.md\n",
+      "dmu32_ELAIS-N1/readme.md\n",
+      "dmu32_NGP/readme.md\n",
+      "dmu32_XMM-13hr/readme.md\n",
+      "dmu32_Bootes/readme.md\n",
+      "dmu32_HDF-N/readme.md\n",
+      "dmu32_EGS/readme.md\n"
      ]
     }
    ],
@@ -60,8 +60,8 @@
     "\n",
     "for file in file_list:\n",
     "    f = open(file,'r')\n",
-    "    print(file.replace('yml','txt').replace('meta_main','readme'))\n",
-    "    readme = open(file.replace('yml','txt').replace('meta_main','readme'),'w')\n",
+    "    print(file.replace('yml','md').replace('meta_main','readme'))\n",
+    "    readme = open(file.replace('yml','md').replace('meta_main','readme'),'w')\n",
     "    for lines in f:\n",
     "\n",
     "        line = lines.split()\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        " 'dmu32_EGS/meta_main.yml']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,9 +170,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
-   "name": "python3"
+   "name": "helpint"
   },
   "language_info": {
    "codemirror_mode": {
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
