--- a/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
@@ -149,7 +149,7 @@
     "# # XID+ SPIRE\n",
     "\n",
     "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_SSDF/data/\"\n",
-    "                          \"dmu26_XID+SPIRE_SSDF_cat_20190930.fits\")\n",
+    "                          \"dmu26_XID+SPIRE_SSDF_cat_20200109.fits\")\n",
     "xid_spire.meta = None\n",
     "\n",
     "xid_spire['HELP_ID'].name = \"help_id\"\n",
@@ -555,7 +555,9 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)"
+    "    #assert set(columns) == set(merged_table.colnames)\n",
+    "    print( set(columns) - set(merged_table.colnames))\n",
+    "    print( set(merged_table.colnames) - set(columns) )"
    ]
   },
   {
@@ -596,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
