--- a/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
@@ -578,7 +578,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/SSDF.fits\")"
+    "    merged_table[columns].write(\"data/SSDF_{}.fits\".format(SUFFIX))"
    ]
   }
  ],
