--- a/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SSDF/SSDF_catalogue_merging.ipynb
@@ -44,7 +44,7 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE_INPUT = True\n",
-    "MAKE_FINAL = False\n",
+    "MAKE_FINAL = True\n",
     "\n",
     "SUFFIX = '20180221'"
    ]
@@ -550,7 +550,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
@@ -573,7 +582,18 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column cigale_chi2_opt has missing data\n",
+      "Column cigale_chi2_ir has missing data\n",
+      "Column cigale_chi2_red has missing data\n",
+      "Column cigale_chi2_ironly has missing data\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
@@ -598,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
