--- a/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "good = {}\n",
-    "for band in ['spire_250', 'spire_350', 'spire_500']: #'pacs_green', 'pacs_red', \n",
+    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']: \n",
     "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
     "                                   ~master_catalogue['flag_{}'.format(band)])\n",
     "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
@@ -452,6 +452,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
@@ -467,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
