--- a/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
@@ -21,9 +21,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-06-02 12:19:29.451385\n"
+      "2020-02-18 15:40:42.478501\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
       "  return getattr(self.data, op)(other)\n"
      ]
     }
@@ -604,7 +604,18 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column cigale_chi2_opt has missing data\n",
+      "Column cigale_chi2_ir has missing data\n",
+      "Column cigale_chi2_red has missing data\n",
+      "Column cigale_chi2_ironly has missing data\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
@@ -630,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
